# DevMulti

./: README.md
DevMulti/: AGENTS.md  README.md  pyproject.toml
DevMulti/artifacts/: demo_report.md  devorbit_report.md
DevMulti/docs/: application-brief.md  design.md
DevMulti/examples/sample_project/: README.md  app.py
DevMulti/src/devorbit/: __init__.py  cli.py  context.py  models.py  report.py  repository.py  workflow.py
DevMulti/src/devorbit/agents/: __init__.py  base.py  fixer.py  presenter.py  reviewer.py  scanner.py  tester.py  workflow_agents.py
DevMulti/src/devorbit/llm/: __init__.py  mock.py  openai_compatible.py  provider.py
DevMulti/src/devorbit/providers/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py
DevMulti/tests/: test_cli.py  test_import.py  test_mock_llm.py  test_models.py  test_workflow.py  test_workflow_agents.py
DevMulti/tests/fixtures/sample_repo/: README.md  app.py  pyproject.toml
DevMulti/tests/fixtures/sample_repo/src/: core.py
